--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
   },
   "homepage": "https://github.com/inesantos29/catch-of-the-day#readme",
   "devDependencies": {
-    "concurrently": "4.1.0",
-    "react-scripts": "^2.1.1"
+    "concurrently": "^5.1.0",
+    "react-scripts": "^3.4.1"
   },
   "dependencies": {
-    "autoprefixer-stylus": "0.14.0",
-    "firebase": "^5.7.0",
-    "prop-types": "^15.6.0",
-    "re-base": "4.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^4.3.1",
-    "react-transition-group": "^2.2.1",
-    "serve": "^10.1.1",
-    "stylus": "0.54.5"
+    "autoprefixer-stylus": "^1.0.0",
+    "firebase": "^7.13.1",
+    "prop-types": "^15.7.2",
+    "re-base": "^4.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0",
+    "serve": "^11.3.0",
+    "stylus": "^0.54.7"
   },
   "scripts": {
     "dev": "react-scripts start",
