--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "autoprefixer-stylus": "^1.0.0",
-    "firebase": "^7.13.1",
+    "firebase": "^7.14.0",
     "prop-types": "^15.7.2",
     "re-base": "^4.0.0",
     "react": "^16.13.1",
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "react-scripts start",
+    "start": "serve --single ./build",
     "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
